kubernetes/apps/media/qbittorrent/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      containers:
        - name: qbittorrent
          image: ghcr.io/hotio/qbittorrent:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
            failureThreshold: 6
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              memory: 2Gi
          volumeMounts:
            - name: config
              mountPath: /config
              subPath: qbittorrent
            - name: media
              mountPath: /data/downloads
              subPath: "DL"
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: media-config
        - name: data
          persistentVolumeClaim:
            claimName: media-data
        - name: media
          persistentVolumeClaim:
            claimName: media-library
