kubernetes/apps/media/qbittorrent/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: media
spec:
  type: ClusterIP
  selector:
    app: qbittorrent
  ports:
    - port: 8080
      targetPort: 8080
